--- a/REUSE.toml
+++ b/REUSE.toml
@@ -4,13 +4,31 @@ SPDX-PackageSupplier = "IronCore authors <ospo@sap.com>"
 SPDX-PackageDownloadLocation = "https://github.com/ironcore-dev/metal-operator"
 
 [[annotations]]
-path = [".github/**", ".gitignore", ".dockerignore", ".golangci.yml", "CODEOWNERS", "Dockerfile", "Makefile", "PROJECT", "config/**", "go.mod", "mkdocs.yml", "go.sum", "hack/**"]
+path = [
+    ".github/**",
+    ".gitignore",
+    ".dockerignore",
+    ".golangci.yml",
+    "CODEOWNERS",
+    "Dockerfile",
+    "Makefile",
+    "PROJECT",
+    "config/**",
+    "go.mod",
+    "go.sum",
+    "mkdocs.yml",
+    "REUSE.toml",
+    "hack/**"
+]
 precedence = "aggregate"
 SPDX-FileCopyrightText = "2024 SAP SE or an SAP affiliate company and IronCore contributors"
 SPDX-License-Identifier = "Apache-2.0"
 
 [[annotations]]
-path = ["docs/**", "README.md"]
+path = [
+    "docs/**",
+    "README.md"
+]
 precedence = "aggregate"
 SPDX-FileCopyrightText = "2024 SAP SE or an SAP affiliate company and IronCore contributors"
 SPDX-License-Identifier = "Apache-2.0"
