--- a/.github/workflows/check-codegen.yml
+++ b/.github/workflows/check-codegen.yml
@@ -22,7 +22,7 @@ jobs:
       run: make helm
     - name: Compare the expected and actual generated/* directories
       run: |
-        if [ "$(git diff --ignore-space-at-eol client-go/ | wc -l)" -gt "0" ]; then
+        if [ "$(git diff | wc -l)" -gt "0" ]; then
           echo "Detected uncommitted changes after build. Consider running 'make generate && make docs && make helm'."
           echo "See status below:"
           git diff
