--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -3,8 +3,8 @@ name: Lint
 on:
   pull_request:
     paths-ignore:
-    - 'docs/**'
-    - '**/*.md'
+      - "docs/**"
+      - "**/*.md"
 
 jobs:
   lint:
